added skill contents

--- a/index.html
+++ b/index.html
@@ -51,6 +51,37 @@
                 </div>
             </div>
         </section>
+        <section>
+            <h3 class="section-title" style="margin-top: 200px; margin-bottom: 200px;">What I do</h3>
+            <div class="skills-container">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <p class="skill-title">Vanilla JavaScript</p>
+                    <p class="skill-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem modi voluptates quod quisquam eligendi iusto!</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <p class="skill-title">React</p>
+                    <p class="skill-desc">Nam omnis perspiciatis corrupti laudantium similique eos obcaecati tenetur unde at. Veniam rerum obcaecati iste?</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <p class="skill-title">Node JS</p>
+                    <p class="skill-desc">Architecto fugit explicabo, ipsum vel excepturi aliquam nihil harum porro magni voluptatum, quidem repellat sunt!</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <p class="skill-title">Mongo DB</p>
+                    <p class="skill-desc">Laudantium, animi saepe? Blanditiis corrupti ipsam officia laboriosam sint aut excepturi mollitia possimus impedit voluptatem!</p>
+                </div>
+            </div>
+        </section>
+        <section class="resume">
+            <h3 class="section-title">A summary of My Resume</h3>
+            <div class="resume-content">
+                
+            </div>
+        </section>
     </main>
     <footer>
 
